<resources>
    <string name="app_name">Worldepth</string>
    <string name="capture">Capture</string>
    <string name="load_sample">Load sample</string>
    <string name="read_permission_failed">Please allow read permission to open model files.</string>
    <string name="open_model">Open model…</string>
    <string name="open_model_success">Model loaded successfully.</string>
    <string name="open_model_error">Failed to load model.</string>
    <string name="no_location">Please select a location</string>
    <string name="model_upload_failure">Model failed to upload</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="PWReq1">-Password must be at least 8 characters long</string>
    <string name="PWReq2">-Password cannot be over 20 characters long</string>
    <string name="PWReq3">-Password must have uppercase and lowercase letters</string>
    <string name="PWReq4">-Password must contain numbers</string>
    <string name="PWReq5">-Passwords must match</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="backButton">Back</string>
    <string name="emailSignup">Sign up with email</string>
    <string name="phoneSignup">Sign up with phone</string>
    <string name="signIn">Sign in</string>
    <string name="signUp">Sign up</string>
    <string name="post">Post</string>
    <string name="viewer">Viewer</string>
    <string name="camera">Camera</string>
    <string name="nextButton">Next</string>
    <string name="phoneIcon">Phone icon</string>
    <string name="loading">Loading...</string>
    <string name="sign_out">Sign Out</string>
    <string name="guest">Guest</string>
    <string name="must_have_upper_and_lower_case">Must have upper and lower case</string>
    <string name="about">About</string>
    <string name="notifications">Notifications</string>
    <string name="contact_us">Contact Us</string>
    <string name="feedback">Feedback</string>
    <string name="rate_us_on_the_app_store">Rate Us on the App Store</string>
    <string name="account">Account</string>
    <string name="must_contain_valid_characters">Must contain valid characters</string>
    <string name="viewerbacktocamera">viewerBackToCamera</string>
    <string name="sample">sample</string>
    <string name="email">Email</string>
    <string name="map">Map</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
<<<<<<< HEAD
=======
    <string name="welcome">Welcome to Worldepth</string>
    <string name="continue_with">Continue with:</string>
    <string name="general">General</string>
    <string name="me">Me</string>
    <string name="SIGNIN">SIGN IN</string>
    <string name="CONTINUE">CONTINUE</string>
    <string name="SIGNUP">SIGN UP</string>
>>>>>>> e5fc9b6dcafbc680a5b6547bf3d8e8c1882935d8

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="settings_cap">SETTINGS</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="worldepthlogo">WorldepthLogo</string>
    <string name="title_activity_maps">Map</string>
    <string name="followers">Followers</string>
    <string name="friends">Friends</string>
    <string name="password">Password</string>
    <string name="test_login">Test Login</string>
    <string name="login">Login</string>
    <string name="animation">Animation</string>
    <string name="navbutton">NavButton</string>
    <string name="_0">0 %</string>
</resources>
