<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <ImageView
        android:id="@+id/postBackButton"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:src="@drawable/back_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_cap"
        android:textColor="@color/settingsText"
        android:fontFamily="@font/montserrat_sb"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"/>

    <Button
        android:id="@+id/settingsRate"
        android:text="@string/me"
        android:textColor="@color/settingsText"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:fontFamily="@font/montserrat_sb"
        android:textSize="15sp"
        android:background="@drawable/settings_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14" />

    <Button
        android:id="@+id/settingsNotifications"
        android:text="@string/notifications"
        android:textColor="@color/settingsText"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:fontFamily="@font/montserrat_sb"
        android:textSize="15sp"
        android:background="@drawable/settings_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28" />

    <Button
        android:id="@+id/settingsContact"
        android:text="@string/general"
        android:textColor="@color/settingsText"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:fontFamily="@font/montserrat_sb"
        android:textSize="15sp"
        android:background="@drawable/settings_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42" />

    <Button
        android:id="@+id/settingsAccount"
        android:text="@string/account"
        android:textColor="@color/settingsText"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:fontFamily="@font/montserrat_sb"
        android:textSize="15sp"
        android:background="@drawable/settings_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

    <Button
        android:id="@+id/CalibButton"
        android:text="Calibrate"
        android:textColor="@color/settingsText"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:fontFamily="@font/montserrat_sb"
        android:textSize="15sp"
        android:background="@drawable/settings_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.70" />

    <Button
        android:id="@+id/signOutButton"
        android:text="@string/sign_out"
        android:textColor="@color/settingsText"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:fontFamily="@font/montserrat_sb"
        android:textSize="15sp"
        android:background="@drawable/settings_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.84" />

    <Button
        android:id="@+id/settingsAbout"
        android:text="@string/about"
        android:textColor="@color/settingsText"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:fontFamily="@font/montserrat_sb"
        android:textSize="15sp"
        android:background="@drawable/settings_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98" />

</android.support.constraint.ConstraintLayout>